--- a/style.css
+++ b/style.css
@@ -6,14 +6,84 @@
 
 body {
     font-size: 62.5%;
-    padding: 1rem;
 }
 
 #clock {
+    margin-bottom: 2rem;
     height: 13rem;
     width: 13rem;
     border-radius: 50%;
     background: white url(clock.svg) no-repeat center;
-    box-shadow: gray 0 0 1rem;
+    box-shadow: black 0 0 1rem;
+    background-size: 88%;
+    padding-bottom: 31%;
+}
+
+#clock:after {
+    background: black;
+    border-radius: 50%;
+    content: "";
+    position: absolute;
+    left: 22%;
+    top: 16%;
+    width: 5%;
+    height: 5%;
+    z-index: 10;
+}
+
+#containerHours, #containerMinutes, #containerSeconds {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    height: 13rem;
+    width: 13rem;
+}
+
+#hours, #minutes, #seconds {
+    background: black;
+    position: absolute;
+    transform-origin: 50% 100%;
+}
+
+#hours {
+    height: 20%;
+    left: 48.75%;
+    top: 30%;
+    width: 2.5%;
+}
+
+#minutes {
+    height: 40%;
+    left: 49%;
+    top: 10%;
+    width: 2%;
+}
+
+#seconds {
+    height: 45%;
+    left: 49.5%;
+    top: 14%;
+    width: 1%;
+    z-index: 8;
+}
+
+#containerHours {
+    animation: rotate 43200s infinite linear;
+}
+
+#containerMinutes {
+    animation: rotate 3600s infinite linear;
+}
+
+#containerSeconds {
+    animation: rotate 60s infinite linear;
+}
+
+@keyframes rotate {
+    100% {
+        transform: rotateZ(360deg);
+    }
 }
 
