--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ body {
     top: 45%;
 }
 
+/* Position & size: Hours / Minutes / Seconds */
 #hours {
     height: 20%;
     left: 49%;
@@ -79,6 +80,7 @@ body {
     width: 1%;
 }
 
+/* Transitions Aiguilles: Minutes / Secondes: */
 #minutes {
     transition: transform 0.3s cubic-bezier(.4,2.08,.55,.44);
 }
